// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Button 스냅샷 테스트 1`] = `
<div>
  <button
    class="bg-red-500"
  >
    클릭하세요
  </button>
</div>
`;

exports[`SnapshotButton Button 스냅샷 테스트 1`] = `
<div>
  <button
    class="bg-blue-500  "
  >
    클릭하세요
  </button>
</div>
`;

exports[`SnapshotButton 로딩 상태 스냅샷 1`] = `
<div>
  <button
    class="bg-blue-500  animate-pulse"
  >
    클릭하세요
  </button>
</div>
`;

exports[`SnapshotButton 비활성화 상태 스냅샷 1`] = `
<div>
  <button
    class="bg-blue-500 cursor-not-allowed opacity-50 "
  >
    클릭하세요
  </button>
</div>
`;
